cmake_minimum_required(VERSION 3.31)
project(linguagem_c C)

set(CMAKE_C_STANDARD 11)

add_executable(linguagem_c
        chap01/prog0101.c
        chap01/prog0102.c
        chap01/prog0103.c
        chap01/prog0104.c
        chap01/prog0105.c
        chap01/prog0106.c
        chap01/prog0107.c
        chap01/prog0108.c
        chap02/prog0201.c
        chap02/prog0202.c
        chap02/prog0203.c
        chap02/prog0204.c
        chap02/prog0205.c
        chap02/prog0206.c
        chap02/prog0207.c
        chap02/prog0208.c
        chap02/prog0209.c
        chap02/prog0210.c
        chap02/prog0211.c
        chap03/prog0301.c
        chap03/prog0302.c
        chap03/prog0303.c
        chap03/prog0303a.c
        chap03/prog0304.c
        chap03/prog0305.c
        chap03/prog0312.c
        chap03/prog0315.c
        chap03/prog0316-bad.c
        chap04/prog0401.c
        chap04/prog0402.c
        chap04/prog0403.c
        chap04/prog0404.c
        chap04/prog0405.c
        chap04/prog0406.c
        chap04/prog0407.c
        chap04/prog0408.c
        chap04/prog0409.c)
